metadata menu position fix on mobile, 3d layout resize bug, add tabix fetching to worker

--- a/frontend/src/components/trackContainers/MetadataHeader.css
+++ b/frontend/src/components/trackContainers/MetadataHeader.css
@@ -26,4 +26,5 @@
     margin-left: 1ch;
     margin-bottom: auto;
     padding-bottom: 5px;
+    position: relative;
 }
