--- a/frontend/src/components/trackContainers/MetadataSelectionMenu.css
+++ b/frontend/src/components/trackContainers/MetadataSelectionMenu.css
@@ -6,7 +6,7 @@
     z-index: 4;
     background: #edeef1;
     padding: 5px;
-    right: 60px;
-    top: 40px;
+    /* right: 60px; */
+    /* top: 40px; */
     min-width: 240px;
 }
